unpackaged/main/default/objects/Application__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label># Application</label>
    <type>AutoNumber</type>
</CustomField>