unpackaged/main/default/objects/Application__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <formula>(  Account__r.FON_Partner_Provider_ID__c  + &#39;.&#39; +  Application_number__c + &#39;.&#39; &amp;  Application_Year__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application ID</label>
    <type>Text</type>
</CustomField>