unpackaged/main/default/objects/Application__c/fields/Application_number__c.field-meta.xml
<CustomField>
    <fullName>Application_number__c</fullName>
    <label>Application #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>