unpackaged/main/default/objects/Application__c/fields/Application_Year__c.field-meta.xml
<CustomField>
    <fullName>Application_Year__c</fullName>
    <description>2 digit year</description>
    <inlineHelpText>2 digit year</inlineHelpText>
    <label>Session Year</label>
    <length>2</length>
    <type>Text</type>
</CustomField>