unpackaged/main/default/objects/Application__c/fields/Full_Year__c.field-meta.xml
<CustomField>
    <fullName>Full_Year__c</fullName>
    <formula>LEFT(TEXT(YEAR(TODAY())), 2)&amp;Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>