unpackaged/main/default/objects/Application__c/fields/Legacy_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contact_Id__c</fullName>
    <label>Legacy Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>