unpackaged/main/default/objects/Application__c/fields/Number_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_Year__c</fullName>
    <formula>&#39;#&#39;&amp;Application_number__c &amp; &#39; (&#39; &amp; Full_Year__c &amp; &#39;)&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number / Year</label>
    <type>Text</type>
</CustomField>