unpackaged/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>IsPaid__c</columns>
    <columns>Year__c</columns>
    <columns>Application_ID__c</columns>
    <columns>Application_number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>